digiKam 7.3.0 - Release date: 2021-xx-xx

*****************************************************************************************************
NEW FEATURES:

General: Digital Scanner plugin is now available under Windows.

*****************************************************************************************************
BUGFIXES:

001 ==> 434750 - Yolov3 doesn't work on png Images.
002 ==> 434795 - Advanced search seems to notice internal tags.
003 ==> 356065 - Baloo metadata not written out by Album.
004 ==> 433226 - Crash - searching new entries.
005 ==> 435021 - Rename does not support both comma and semicolon.
006 ==> 435020 - Check for new version doesn't find updated released version.
007 ==> 435065 - After upgrade from digiKam 7.1 to 7.2, digiKam won't start.
008 ==> 434960 - Libksane impossible to cross-compile for Windows.
009 ==> 417064 - Import menu has no option to acquire images from scanner.
010 ==> 194341 - digiKam crashed with seg fault.
011 ==> 140750 - Image malformed in digiKam.
012 ==> 205140 - digiKam crash using digital scanner.
013 ==> 205198 - digiKam crash when trying to save a scanned image.
014 ==> 