@@ -21,4 +21,5 @@ BUGFIXES:
 011 ==> 140750 - Image malformed in digiKam.
 012 ==> 205140 - digiKam crash using digital scanner.
 013 ==> 205198 - digiKam crash when trying to save a scanned image.
-014 ==> 
+014 ==> 435089 - Tags Manager toolbar icon buttons do nothing.
+015 ==> 
